# MyRTMP

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myrtmp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  util.h
app/src/main/cpp/libbreakpad/: CMakeLists.txt
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/example/myrtmp/: AudioChannel.java  CameraHelper.java  MainActivity.java  MyPusher.java  VideoChannel.java
app/src/main/java/com/example/myrtmp/crash/: CrashHandler.java  CrashReport.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myrtmp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
